adding function to load files. Needed to load file for intellij run and running as jar

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'functional.Main'
+        attributes 'Main-Class': 'Main'
     }
 }
 
