Revert "fixed Main manifest for jar file and King making rochade multiple tim…"

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'main.Main'
+        attributes 'Main-Class': 'Main'
     }
 }
 
