--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,18 @@ repositories {
 }
 
 dependencies {
+    implementation(project(':Server'))
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 jar {
+
     manifest {
         attributes 'Main-Class': 'main.Main'
     }
+
+
 }
 
 test {
