--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,12 @@ dependencies {
 }
 
 jar {
-
     manifest {
         attributes 'Main-Class': 'main.Main'
     }
-
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 
 }
 
